--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,8 @@
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.8",
+    "otplib": "^12.0.1",
+    "qrcode": "^1.5.4",
     "sharp": "^0.34.5",
     "tesseract.js": "^4.1.4",
     "tmp-promise": "^3.0.3",
